(library
 (name common)
 (libraries zamburak matplotlib)
 (modules common))

(executable
 (name ucb)
 (libraries zamburak matplotlib common)
 (modules ucb))

(executable
 (name exp3)
 (libraries zamburak matplotlib common)
 (modules exp3))

(executable
 (name trade)
 (libraries zamburak matplotlib common stock)
 (modules trade))
